Fixed collapsing content

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ li img {
     height: 100vh;
     display: grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: 0.7fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    overflow: auto;
 }
 
 .sidebar {
@@ -34,6 +34,7 @@ li img {
     gap: 20px;
     margin-top: 5%;
     margin-left: 5%;
+    padding: 20px;
     
 }
 
@@ -126,6 +127,7 @@ li img {
     grid-template-columns: 10% 40%;
     font-size: 1rem;
     align-items: center;
+    
 }
 
 
@@ -133,6 +135,10 @@ li img {
     margin-left: 30%;
     height: 4rem;
     width: 4rem;
+}
+
+.header-bottom-left p {
+    margin-left: clamp(10px, 4%, 20px);
 }
 
 .header-bottom-left p:nth-child(2){
@@ -179,7 +185,7 @@ li img {
 .project-contents h2 {
     margin-left: 5%;
     margin-top: 2%;
-    overflow: auto;
+   /* overflow: auto;*/
 }
 
 .cards {
@@ -214,10 +220,12 @@ li img {
 
 }
 
-.news-contents h2 {
+.news-contents > h2 {
+    justify-self: start;
     grid-row: 1 / 2;
-    margin-top: 2%;
-    margin-left: 5%;
+    margin-top: 7%;
+    position: relative;
+    left: 16%;
 }
 
 .announcements, 
@@ -247,8 +255,8 @@ li img {
 }
 
 .news-item {
-    width: clamp(110px, 100%, 300px);
-    height: clamp(160px, 95%, 450px);
+    width: clamp(60px, 100%, 300px);
+    height: clamp(100px, 95%, 450px);
     margin: 0;
     padding: 1.5rem;
     list-style-type: none;
